<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_20sdp"
    android:background="@color/background_color"
    android:paddingHorizontal="@dimen/_16sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_close_square"
        app:layout_constraintBottom_toBottomOf="@+id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header" />

    <TextView
        android:id="@+id/header"
        style="@style/regular_caption1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/save_loan_data"
        app:layout_constraintEnd_toStartOf="@+id/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/body_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_32sdp"
        android:background="@color/white"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TextView
            android:id="@+id/icon_text"
            style="@style/regular_caption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_text"
            app:spanCount="4"
            tools:itemCount="11"
            tools:listitem="@layout/item_icon" />

        <TextView
            android:id="@+id/name_text"
            style="@style/regular_caption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView_icon" />

        <EditText
            android:id="@+id/name_edittext"
            style="@style/regular_caption1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_etittext"
            android:paddingVertical="@dimen/_9sdp"
            android:hint="Value"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:textColor="@color/gray_text"
            android:textColorHint="@color/gray_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_text" />

        <TextView
            android:id="@+id/error_text"
            style="@style/light_caption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/required"
            android:visibility="gone"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_edittext" />


        <TextView
            android:id="@+id/start_text"
            style="@style/regular_caption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:text="@string/start_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_edittext" />

        <TextView
            android:id="@+id/data_text"
            style="@style/regular_caption1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="ex: 31/12/2023"
            android:paddingVertical="@dimen/_9sdp"
            android:paddingLeft="@dimen/_4sdp"
            android:background="@drawable/bg_etittext"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_text" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/calendar"
            android:layout_width="@dimen/_64sdp"
            android:layout_height="0dp"
            android:src="@drawable/ic_calendar"
            android:padding="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="@+id/data_text"
            app:layout_constraintEnd_toEndOf="@+id/data_text"
            app:layout_constraintTop_toTopOf="@+id/data_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_button"
        style="@style/light_caption1"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:background="@drawable/radius_button"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/save"
        android:textColor="@color/color_pure_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/body_container" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        style="@style/light_caption1"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:background="@drawable/radius_button_white"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/save_button"
        app:layout_constraintEnd_toStartOf="@+id/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/save_button" />

</androidx.constraintlayout.widget.ConstraintLayout>